# rooterr

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cog.toml  docker-compose.example.yml  rooterr.toml.example
.github/workflows/: release.yml
src/: bootstrap.rs  config.rs  main.rs
src/adapters/: decision_events.rs  mod.rs
src/adapters/llm/: mod.rs
src/adapters/metadata/: mod.rs
src/adapters/sonarr_http/: mod.rs
src/adapters/sqlite/: mod.rs
src/adapters/web/: mod.rs
src/domain/: classification.rs  decision.rs  metadata.rs  mod.rs  root_folder.rs  series.rs  status.rs
src/ports/: classifier.rs  decision_repository.rs  llm_model_provisioner.rs  llm_status_probe.rs  metadata_provider.rs  metadata_status_probe.rs  mod.rs  sonarr_gateway.rs
src/use_cases/: accept_series_added.rs  ensure_llm_model_ready.rs  list_decisions.rs  mod.rs  process_series_decision.rs  retry_decision.rs  view_decision.rs  view_status.rs
