[package]
name = "rooterr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
maud = { version = "0.27.0", features = ["axum"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.34.0", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.23"
wiremock = "0.6.5"
